modified web server address

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8086/manager/text</url>
+					<url>http://52.14.249.210:8086/manager/text</url>
 					<server>deployment</server>
 					<username>admin</username>
 					<password>admin</password>
